RESOLVED FIXED230917
Crash in WebKit::DisplayLink::displayLinkCallback()
https://bugs.webkit.org/show_bug.cgi?id=230917
Summary Crash in WebKit::DisplayLink::displayLinkCallback()
Simon Fraser (smfr)
Reported 2021-09-28 14:39:02 PDT
Crash in Crash in WebKit::DisplayLink::displayLinkCallback()
Attachments
Patch (4.09 KB, patch)
2021-09-28 14:41 PDT, Simon Fraser (smfr)
thorton: review+
Patch (4.19 KB, patch)
2021-09-28 15:54 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-09-28 14:41:31 PDT
Simon Fraser (smfr)
Comment 2 2021-09-28 14:41:35 PDT
Tim Horton
Comment 3 2021-09-28 14:43:11 PDT
Comment on attachment 439521 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=439521&action=review > Source/WebKit/UIProcess/mac/DisplayLink.cpp:51 > - WTFLogAlways("Could not create a display link for display %u: error %d", displayID, error); > + WTFLogAlways("DisplayLink: Could not create a display link for display %u: error %d", displayID, error); Is this disastrous enough that it should be a simulated crash?
Simon Fraser (smfr)
Comment 4 2021-09-28 15:54:58 PDT
EWS
Comment 5 2021-09-28 20:52:24 PDT
Committed r283209 (242251@main): <https://commits.webkit.org/242251@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439537 [details].
Sam Sneddon [:gsnedders]
Comment 6 2021-10-29 13:29:16 PDT
*** Bug 232502 has been marked as a duplicate of this bug. ***
Brad Andalman
Comment 7 2021-10-30 10:30:12 PDT
I really hope this is our bug, and am happy to see that (if it is) it has already been fixed. That said, this bug is affecting some of our uses pretty significantly right now. Is there anything we can do on our end that makes it less likely to hit this bug?
Note You need to log in before you can comment on or make changes to this bug.